--- a/single_blog_post_form_download.html
+++ b/single_blog_post_form_download.html
@@ -5,13 +5,61 @@
         Apple and Android devices. Discover the core of Q in our flyer (attached below) and find out how our brand is different to any other EWD out there!
     </span>
 </p>
-<p style="text-align: center; font-size: 20px; margin-top: 40px;"><span class="JsGRdQ">Complete the form below to download the PDF. </span></p>
-<div style="display: flex; justify-content: space-around; margin-top: 40px;" class="form__container">
+<p class="blog-form__title"><span class="JsGRdQ">Complete the form below to download the PDF. </span></p>
+<div class="blog-form__container">
     <img
         src="https://cdn.shopify.com/s/files/1/0561/9626/8195/articles/Q_is_available_on_Android_and_IOS_mobile_devices_and_tablets_and_doesn_t_need_additional_hardware_to_operate._Using_Q_will_save_time_and_money_and_will_reduce_manual_compliance_and_ad_520x500.png"
         alt="Download Flyers"
+        class="blog-form__img"
         height="200"
     />
-    <div class="_form_56" style="border: thin solid #000;"></div>
+    <div class="_form_56 blog-form__main"></div>
+</div>
+<script src="https://flexisourceit.activehosted.com/f/embed.php?id=56" type="text/javascript" charset="utf-8"></script>
+
+
+<style>
+    .blog-form__title {
+        text-align: center;
+        font-size: 20px;
+        margin-top: 40px;
+    }
+
+    .blog-form__container {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 40px;
+    }
+
+    .blog-form__img{
+        max-width:50vw;
+        margin: auto;
+    }
+
+    .blog-form__container .blog-form__main {
+        border: thin solid #000;
+    }
+
+
+    @media screen and (max-width: 767px) {
+        .blog-form__container {
+            flex-direction: column;
+        }
+
+        .blog-form__container .blog-form__main {
+            margin-top: 30px;
+        }
+    }
+</style>
+
+
+
+
+<!-- OLD SHARNA POST 2:07pm 06-09-2021 -->
+
+<p>An EWD for everyone! <span class="JsGRdQ">Q by Quallogi was built to be Australia's most simple and cost-effective CoR tool and is the latest NHVR approved Electronic Work Diary (EWD). Our EWD is shaking up the transport industry with the first application designed for both Apple and Android devices. Discover the core of Q in our flyer (attached below) and find out how our brand is different to any other EWD out there! </span></p>
+<p style="text-align: center; font-size: 20px; margin-top: 40px;"><span class="JsGRdQ">Complete the form below to download the PDF. </span></p>
+<div style="display: flex; justify-content: space-around; margin-top: 40px;" class="form__container"><img src="https://cdn.shopify.com/s/files/1/0561/9626/8195/articles/Q_is_available_on_Android_and_IOS_mobile_devices_and_tablets_and_doesn_t_need_additional_hardware_to_operate._Using_Q_will_save_time_and_money_and_will_reduce_manual_compliance_and_ad_520x500.png" alt="Download Flyers" height="200" />
+<div class="_form_56" style="border: thin solid #000;"></div>
 </div>
 <script src="https://flexisourceit.activehosted.com/f/embed.php?id=56" type="text/javascript" charset="utf-8"></script>
